--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,21 @@
 
 .control-panel {
   text-align: center;
-  margin-bottom: 150px;
+  margin-bottom: 50px;
+}
+
+.control-panel p.text {
+  font-size: 34px;
 }
 
 .control-panel button{
+  font-size: 34px;
   margin: 10px;
+  height: 50px;
+}
+
+.control-panel button.frequency{
+  width: 50px;
 }
 
 .drop {
